--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Privacy Policy</h1>
 
   <p>
-    This application ("the app") does not collect, store, or share any personal
+    This application ("Skeep") does not collect, store, or share any personal
     data from users.
   </p>
 
