--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
   <p>
     The app may use Google Play Games Services to enable features such as
     achievements and leaderboards. Any data handled by Google Play Games Services
-    is managed according to Google's own privacy policy.
+    is managed according to Google's
+    <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">
+      Privacy Policy
+    </a>.
   </p>
+
 
   <p>
     We do not have access to, nor do we store, any personal information related
